check folder create

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -669,8 +669,11 @@ jobs:
           name: print version again
           command: $BIT_VERSION = Get-Content -Path .\version.txt; $BIT_VERSION
       - run:
-          name: print version again
-          command: $BIT_VERSION = Get-Content -Path .\version.txt;New-Item -ItemType "directory" -Path "windows\bit-$BIT_VERSION" -Force
+          name: create folder
+          command: $BIT_VERSION = Get-Content -Path .\version.txt;New-Item -ItemType "directory" -Path ".ֿֿֿ\bit-$BIT_VERSION" -Force
+      - run:
+          name: list folders
+          command: dir
       # - run:
       #     name: install bit
       #     command: cd bit-${BIT_VERSION} && npm init -y && yarn add @teambit/bit
