--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -650,7 +650,8 @@ jobs:
   bundle_version_windows:
     <<: *windows_defaults
     steps:
-      - run: choco install node --version 12.15.0
+      # - run: choco install node --version 12.15.0
+      - run: nodejs.install v12.15.0
       - run: node -v
       - run: 'yarn -v'
       - run:
