--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,16 @@ windows_defaults: &windows_defaults
   <<: *windows_default_executor
   <<: *windows_default_working_dir
 
+mac_default_xcode_version: &mac_default_xcode_version
+  xcode: 11.5.0
+
+mac_default_executor: &mac_default_executor
+  macos:
+    <<: *mac_default_xcode_version
+
+mac_defaults: &mac_defaults
+  <<: *mac_default_executor
+
 defaults: &defaults
   <<: *default_image
   <<: *default_resource_class
@@ -613,9 +623,7 @@ jobs:
           name: Upload tar file
           command: ./jfrog rt u "bit-${BIT_VERSION}.tar.gz" bvm/dev/${BIT_VERSION}/bit-${BIT_VERSION}.tar.gz --flat=false
 
-  harmony_publish_to_gcloud:
-    docker:
-      - image: bitcli/node-gcloud-sdk
+  bundle_version_linux:
     <<: *defaults
     steps:
       - run:
@@ -624,6 +632,9 @@ jobs:
       - run:
           name: Setup bit version environment variables
           command: echo "export BIT_VERSION=$(npm view @teambit/bit version)" >> $BASH_ENV && source $BASH_ENV
+      - run:
+          name: create linux
+          command: mkdir linux
       - run:
           name: create empty folder
           command: mkdir bit-${BIT_VERSION}
@@ -637,11 +648,125 @@ jobs:
           name: compress bit
           command: tar -cvf bit-${BIT_VERSION}.tar.gz bit-${BIT_VERSION}
       - run:
+          name: move to linux folder
+          command: mv bit-${BIT_VERSION}.tar.gz linux/bit-${BIT_VERSION}.tar.gz
+      - persist_to_workspace:
+          root: .
+          paths:
+            - linux
+      - store_artifacts:
+          path: linux
+
+  bundle_version_macos:
+    <<: *mac_defaults
+    steps:
+      - run: node -v
+      - run: yarn -v
+      - run:
+          name: print bit version
+          command: npm view @teambit/bit version
+      - run:
+          name: Setup bit version environment variables
+          command: echo "export BIT_VERSION=$(npm view @teambit/bit version)" >> $BASH_ENV && source $BASH_ENV
+      - run:
+          name: create macos
+          command: mkdir macos
+      - run:
+          name: create empty folder
+          command: mkdir bit-${BIT_VERSION}
+      - run:
+          name: install bit
+          command: cd bit-${BIT_VERSION} && npm init -y && yarn add @teambit/bit
+      - run:
+          name: remove leftovers
+          command: cd bit-${BIT_VERSION} && rm package.json && rm yarn.lock
+      - run:
+          name: compress bit
+          command: tar -cvf bit-${BIT_VERSION}.tar.gz bit-${BIT_VERSION}
+      - run:
+          name: move to macos folder
+          command: mv bit-${BIT_VERSION}.tar.gz macos/bit-${BIT_VERSION}.tar.gz
+      - persist_to_workspace:
+          root: .
+          paths:
+            - macos
+      - store_artifacts:
+          path: macos
+
+  bundle_version_windows:
+    <<: *windows_defaults
+    steps:
+      - run: choco install nodejs --version 12.15.0
+      # - run: nodejs.install v12.15.0
+      - run: node -v
+      - run: 'yarn -v'
+      - run:
+          name: print bit version
+          command: npm view @teambit/bit version
+      # - run:
+      #     name: Setup bit version environment variables
+      #     command: $BIT_VERSION = npm view @teambit/bit version
+      # - run:
+      #     name: print version again
+      #     command: $BIT_VERSION
+      - run:
+          name: create version file
+          command: npm view @teambit/bit version | Out-File -FilePath .\version.txt
+      - run:
+          name: create folder
+          command: New-Item -ItemType "directory" -Path ".\bundle"
+      # - run:
+      #     name: create folder
+      #     command: $BIT_VERSION = Get-Content -Path .\version.txt;New-Item -ItemType "directory" -Path ".\bit-$BIT_VERSION" -Force
+      - run: 'node -v'
+      - run:
+          name: install bit
+          command: cd bundle; npm init -y; yarn add @teambit/bit
+      - run:
+          name: remove leftovers
+          command: Remove-Item .\bundle\package.json; Remove-Item .\bundle\yarn.lock
+      - run:
+          name: rename folder
+          command: $BIT_VERSION = Get-Content -Path .\version.txt; Rename-Item .\bundle ".\bit-$BIT_VERSION"
+      - run:
+          name: compress bit
+          command: $BIT_VERSION = Get-Content -Path .\version.txt; tar -cvf bit-${BIT_VERSION}.tar.gz bit-${BIT_VERSION}
+      - run:
+          name: create folder
+          command: New-Item -ItemType "directory" -Path ".\windows"
+      - run:
+          name: move to windows folder
+          command: $BIT_VERSION = Get-Content -Path .\version.txt;Move-Item -Path .\bit-${BIT_VERSION}.tar.gz -Destination .\windows\bit-${BIT_VERSION}.tar.gz
+      - persist_to_workspace:
+          root: .
+          paths:
+            - windows
+      - store_artifacts:
+          path: windows
+
+  harmony_publish_to_gcloud:
+    docker:
+      - image: bitcli/node-gcloud-sdk
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ./
+      - run:
+          name: Setup bit version environment variables
+          command: echo "export BIT_VERSION=$(npm view @teambit/bit version)" >> $BASH_ENV && source $BASH_ENV
+      - run:
           name: Configure gcloud auth
           command: echo "${COMMAND_GCLOUD_AUTHENTICATE}" > /tmp/gcloud-service-key.json && gcloud auth activate-service-account --key-file=/tmp/gcloud-service-key.json
       - run:
-          name: Upload tar file
-          command: gsutil cp bit-${BIT_VERSION}.tar.gz gs://bvm.bit.dev/versions/dev
+          name: Upload tar file (Linux)
+          command: gsutil cp linux/bit-${BIT_VERSION}.tar.gz gs://bvm.bit.dev/versions/dev/Linux/${BIT_VERSION}/bit-${BIT_VERSION}.tar.gz
+      - run:
+          name: Upload tar file (Windows)
+          command: gsutil cp windows/bit-${BIT_VERSION}.tar.gz gs://bvm.bit.dev/versions/dev/Windows_NT/${BIT_VERSION}/bit-${BIT_VERSION}.tar.gz
+      - run:
+          name: Upload tar file (OSX)
+          command: gsutil cp macos/bit-${BIT_VERSION}.tar.gz gs://bvm.bit.dev/versions/dev/Darwin/${BIT_VERSION}/bit-${BIT_VERSION}.tar.gz
+
 
   bit_export:
     <<: *defaults
@@ -1181,10 +1306,24 @@ workflows:
           <<: *master_only_filter
           requires:
             - setup_harmony
-      - harmony_publish_to_gcloud:
+      - bundle_version_linux:
           <<: *master_only_filter
           requires:
             - bit_tag
+      - bundle_version_windows:
+          <<: *master_only_filter
+          requires:
+            - bit_tag
+      - bundle_version_macos:
+          <<: *master_only_filter
+          requires:
+            - bit_tag
+      - harmony_publish_to_gcloud:
+          <<: *master_only_filter
+          requires:
+            - bundle_version_linux
+            - bundle_version_windows
+            - bundle_version_macos
       - bit_export:
           <<: *master_only_filter
           requires:
@@ -1221,11 +1360,28 @@ workflows:
           requires:
             - harmony_deploy_approval_job
             - setup_harmony
-      - harmony_publish_to_gcloud:
+      - bundle_version_linux:
           <<: *master_only_filter
           requires:
             - harmony_deploy_approval_job
             - bit_tag
+      - bundle_version_windows:
+          <<: *master_only_filter
+          requires:
+            - harmony_deploy_approval_job
+            - bit_tag
+      - bundle_version_macos:
+          <<: *master_only_filter
+          requires:
+            - harmony_deploy_approval_job
+            - bit_tag
+      - harmony_publish_to_gcloud:
+          <<: *master_only_filter
+          requires:
+            - harmony_deploy_approval_job
+            - bundle_version_linux
+            - bundle_version_windows
+            - bundle_version_macos
       - bit_export:
           <<: *master_only_filter
           requires:
