reintroduce "rootDir" (fix source maps)

--- a/scopes/react/react/typescript/tsconfig.json
+++ b/scopes/react/react/typescript/tsconfig.json
@@ -10,7 +10,8 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "rootDir": "."
   },
   "exclude": [
     "dist"
