--- a/scopes/stencil/stencil/typescript/tsconfig.json
+++ b/scopes/stencil/stencil/typescript/tsconfig.json
@@ -14,7 +14,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
+    "rootDir": "."
   },
   "exclude": [
     "node_modules"
