remove the recent changes of rootDir in the tsconfig of the workspace

--- a/scopes/react/react/typescript/tsconfig.json
+++ b/scopes/react/react/typescript/tsconfig.json
@@ -10,8 +10,7 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "rootDir": "."
+    "esModuleInterop": true
   },
   "exclude": [
     "dist"
