--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -63,6 +63,7 @@
         "@teambit/base-ui.text.heading": "0.6.4",
         "@teambit/base-ui.text.muted-text": "0.6.4",
         "@teambit/base-ui.text.paragraph": "0.6.4",
+        "@teambit/base-ui.text.text": "0.0.12",
         "@teambit/base-ui.text.text-sizes": "0.0.1",
         "@teambit/base-ui.text.themed-text": "0.6.4",
         "@teambit/base-ui.theme.color-palette": "0.6.7",
