--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -204,7 +204,7 @@
         "graphql-type-json": "0.3.2",
         "history": "4.10.1",
         "html-escaper": "3.0.0",
-        "html-webpack-plugin": "5.0.0-beta.6",
+        "html-webpack-plugin": "5.3.1",
         "http-proxy": "1.18.1",
         "humanize-duration": "3.23.1",
         "humanize-string": "2.1.0",
@@ -223,7 +223,7 @@
         "memoize-one": "5.1.1",
         "memory-fs": "0.5.0",
         "mime": "2.5.2",
-        "mini-css-extract-plugin": "1.3.3",
+        "mini-css-extract-plugin": "1.3.9",
         "minimatch": "3.0.4",
         "mousetrap": "1.6.5",
         "nanoid": "3.1.20",
@@ -237,7 +237,7 @@
         "postcss-loader": "3.0.0",
         "postcss-normalize": "9.0.0",
         "postcss-preset-env": "6.7.0",
-        "postcss-safe-parser": "^4.0.2",
+        "postcss-safe-parser": "5.0.2",
         "pretty-time": "1.1.0",
         "prism-react-renderer": "1.2.0",
         "process": "0.11.10",
@@ -267,7 +267,7 @@
         "strip-ansi": "6.0.0",
         "subscriptions-transport-ws": "0.9.18",
         "supi": "0.44.3",
-        "terser-webpack-plugin": "^4.1.0",
+        "terser-webpack-plugin": "5.1.1",
         "tippy.js": "6.2.7",
         "typedoc": "0.18.0",
         "typescript-language-server": "0.4.0",
@@ -281,13 +281,13 @@
         "vscode-languageclient": "6.1.3",
         "vscode-languageserver": "6.1.1",
         "vscode-ws-jsonrpc": "0.2.0",
-        "webpack": "^5.0.0",
-        "webpack-dev-middleware": "^4.1.0",
+        "webpack": "5.26.1",
+        "webpack-dev-middleware": "4.1.0",
         "webpack-dev-server": "^4.0.0-beta.0",
         "webpack-hot-middleware": "2.25.0",
-        "webpack-manifest-plugin": "^3.0.0",
+        "webpack-manifest-plugin": "3.1.0",
         "webpack-merge": "5.7.3",
-        "workbox-webpack-plugin": "^6.0.2",
+        "workbox-webpack-plugin": "6.1.2",
         "ws": "7.4.2",
         "yaml": "1.10.0"
       },
