--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -132,6 +132,7 @@
         "@types/eslint": "7.2.4",
         "@types/express": "4.17.9",
         "@types/find-cache-dir": "3.2.0",
+        "@types/find-root": "1.1.2",
         "@types/get-port": "4.2.0",
         "@types/history": "4.7.8",
         "@types/http-proxy-agent": "2.0.2",
@@ -141,6 +142,7 @@
         "@types/lodash.head": "4.0.6",
         "@types/lodash.pick": "4.4.6",
         "@types/mdx-js__react": "1.5.3",
+        "@types/memoizee": "0.4.5",
         "@types/mime": "2.0.3",
         "@types/mousetrap": "1.6.5",
         "@types/node": "14.14.13",
@@ -199,6 +201,7 @@
         "file-loader": "6.2.0",
         "filenamify": "4.2.0",
         "find-cache-dir": "3.3.1",
+        "find-root": "1.1.0",
         "flatted": "3.1.0",
         "fuse.js": "6.4.6",
         "get-port": "5.1.1",
@@ -229,6 +232,7 @@
         "lodash.head": "4.0.1",
         "lodash.pick": "4.4.0",
         "memoize-one": "5.1.1",
+        "memoizee": "0.4.15",
         "memory-fs": "0.5.0",
         "mime": "2.5.2",
         "mini-css-extract-plugin": "0.12.0",
