--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -254,6 +254,7 @@
         "pretty-time": "1.1.0",
         "prism-react-renderer": "1.2.0",
         "proper-lockfile": "4.1.2",
+        "query-string": "7.0.0",
         "react-animate-height": "2.0.23",
         "react-dev-utils": "10.2.1",
         "react-dom": "16.14.0",
