--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,7 @@ bin/bit
 
 # package managers
 pnpm-lock.yaml
-
+package-lock.json
 build-harmony/yarn.lock
 
 # yarn2 (as suggested here https://yarnpkg.com/getting-started/qa)
