--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -14,6 +14,7 @@
         "@babel/core": "7.11.6",
         "@babel/preset-react": "7.12.7",
         "@babel/preset-typescript": "7.12.7",
+        "@babel/types": "7.13.12",
         "@graphql-modules/core": "0.7.17",
         "@jest/test-result": "26.6.2",
         "@mdx-js/loader": "1.6.21",
@@ -43,8 +44,8 @@
         "@svgr/webpack": "5.5.0",
         "@teambit/any-fs": "0.0.5",
         "@teambit/base-ui.constants.storage": "0.6.3",
-        "@teambit/base-ui.css-components.roundness": "0.6.3",
         "@teambit/base-ui.css-components.pill": "0.6.7",
+        "@teambit/base-ui.css-components.roundness": "0.6.3",
         "@teambit/base-ui.elements.dots-loader": "0.6.3",
         "@teambit/base-ui.elements.image": "0.6.3",
         "@teambit/base-ui.elements.label": "0.6.3",
@@ -74,8 +75,8 @@
         "@teambit/base-ui.theme.fonts.roboto": "0.6.7",
         "@teambit/base-ui.theme.sizes": "0.6.7",
         "@teambit/base-ui.theme.theme-provider": "0.6.7",
-        "@teambit/base-ui.utils.popper-js.ignore-popper-size": "0.6.3",
-        "@teambit/base-ui.utils.popper-js.resize-to-match-reference": "0.6.3",
+        "@teambit/base-ui.utils.popper-js.ignore-popper-size": "0.6.8",
+        "@teambit/base-ui.utils.popper-js.resize-to-match-reference": "0.6.8",
         "@teambit/base-ui.utils.string.affix": "0.0.2",
         "@teambit/base-ui.utils.sub-paths": "0.6.3",
         "@teambit/base-ui.utils.time-ago": "0.5.9",
