--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1026,17 +1026,16 @@ jobs:
           paths:
             - bit/dist
 
-  windows_bvm_install:
+  windows_e2e_nightly:
     <<: *windows_defaults
+    environment:
+      Path: C:\Users\circleci\AppData\Local\.bvm;$ENV:PATH
     steps:
       - attach_workspace:
           at: .
       - run: 'npm i -g bvm'
       - run: 'bvm upgrade'
-      # - persist_to_workspace:
-      #     root: .
-      #     paths:
-      #       - bit/dist
+      - run: 'bit -v'
 
   windows_e2e_test:
     <<: *windows_defaults
@@ -1138,14 +1137,12 @@ workflows:
           filters:
             branches:
               only:
-                - windows_bvm_tests
+                - windows-nightly
     jobs:
-      - checkout_code
-      - windows_bvm_install
-      - windows_e2e_test:
+      - windows_checkout_code
+      - windows_e2e_nightly:
           requires:
-            - checkout_code
-            - windows_bvm_install
+            - windows_checkout_code
 
 
 
@@ -1369,10 +1366,13 @@ workflows:
               only:
                 - master
     jobs:
-      - checkout_code
-      - set_ssh_key
-      - windows_bvm_install
-      - windows_e2e_test
+      - windows_checkout_code
+      - windows_set_ssh_key
+      - windows_checkout_code
+      - windows_e2e_nightly:
+          requires:
+            - windows_checkout_code
+            - windows_set_ssh_key
 
 
   # TODO: check if we can combine it with the regular nightly somehow
