--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1359,12 +1359,11 @@ workflows:
   build_and_test_windows:
     jobs:
       - windows_set_ssh_key
-      - windows_checkout_code:
-          requires:
-            - "windows_set_ssh_key"
+      - windows_checkout_code
       - windows_e2e_nightly:
           requires:
             - windows_checkout_code
+            - windows_set_ssh_key
   # TODO: check if we can combine it with the regular nightly somehow
   harmony_deploy:
     jobs:
