--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1025,16 +1025,20 @@ jobs:
           paths:
             - bit/dist
 
-  windows_e2e_nightly:
+  windows_bvm_install:
     <<: *windows_defaults
     environment:
-      Path: C:\Users\circleci\AppData\Local\.bvm;$ENV:PATH
+      Path: C:\Users\circleci\.npm-global;C:\Users\circleci\AppData\Local\.bvm;$ENV:PATH
     steps:
       - attach_workspace:
           at: .
-      - run: 'npm i -g bvm'
+      - run: 'npm i -g @teambit/bvm'
       - run: 'bvm upgrade'
       - run: 'bit -v'
+      - persist_to_workspace:
+          root: C:\Users\circleci\AppData\Local
+          paths:
+            - .bvm
 
   windows_e2e_test:
     <<: *windows_defaults
@@ -1352,7 +1356,7 @@ workflows:
     jobs:
       - windows_checkout_code
       - windows_set_ssh_key
-      - windows_e2e_nightly:
+      - windows_bvm_install:
           requires:
             - windows_checkout_code
             - windows_set_ssh_key
@@ -1361,7 +1365,7 @@ workflows:
     jobs:
       - windows_set_ssh_key
       - windows_checkout_code
-      - windows_e2e_nightly:
+      - windows_bvm_install:
           requires:
             - windows_checkout_code
             - windows_set_ssh_key
