--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1094,7 +1094,8 @@ jobs:
       # -
       #   run: 'ssh-add ~/.ssh/id_rsa'
       - run: 'cd bit; mkdir junit'
-      - bit_config
+      - bit_config:
+          token: "fake-token"
       - run:
           name: 'write e2e files'
           command: 'cd bit; circleci tests glob "e2e\*\*.e2e*.ts" | circleci tests split --split-by=timings > spec-files.txt'
