--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -937,6 +937,11 @@ jobs:
     steps:
       # - checkout
       - run: git clone https://github.com/teambit/bit.git
+      - run:
+          name: 'write e2e files'
+          command: 'cd bit; circleci tests glob "e2e\*\*.e2e*.ts" | circleci tests split --split-by=filesize | Out-File -FilePath .\spec-files.txt'
+      - run: Get-Content -Path .\bit\spec-files.txt
+      - run: Get-Content -Path .\spec-files.txt
       - persist_to_workspace:
           root: C:\Users\circleci\project
           paths:
