--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1037,6 +1037,11 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run: pwd
+      - run: dir
+      - run: cd bit; dir
+      - run: pwd
+
       - run: npm view @teambit/bit version | Out-File -FilePath .\version.txt
       - run: Get-Content -Path .\version.txt
       - restore_cache:
@@ -1066,6 +1071,10 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run: pwd
+      - run: dir
+      - run: cd bit; dir
+      - run: pwd
       - run: cinst nodejs --version 12.15.0
       - run: node -v
       - run: npm -v
