--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1037,11 +1037,6 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run: pwd
-      - run: dir
-      - run: cd bit; dir
-      - run: pwd
-
       - run: npm view @teambit/bit version | Out-File -FilePath .\version.txt
       - run: Get-Content -Path .\version.txt
       - restore_cache:
@@ -1107,19 +1102,21 @@ jobs:
       #   run: 'chmod 400 ~/.ssh/id_rsa'
       # -
       #   run: 'ssh-add ~/.ssh/id_rsa'
-      - run: 'cd bit; mkdir junit'
+      - run: 'cd bit\bit; mkdir junit'
+      - run: cd bit; dir
+      - run: cd bit\bit; dir
       - bit_config:
           token: "fake-token"
       - run:
           name: 'write e2e files'
-          command: 'cd bit; circleci tests glob "e2e\*\*.e2e*.ts" | circleci tests split --split-by=filesize | Out-File -FilePath .\spec-files.txt'
-      - run: Get-Content -Path .\bit\spec-files.txt
+          command: 'cd bit\bit; circleci tests glob "e2e\*\*.e2e*.ts" | circleci tests split --split-by=filesize | Out-File -FilePath .\spec-files.txt'
+      - run: Get-Content -Path .\bit\bit\spec-files.txt
       - run: pwd
       - run: dir
-      - run: cd bit; dir
+      - run: cd bit\bit; dir
       - run:
           name: 'run e2e tests'
-          command: '$content = get-content spec-files.txt; npm run mocha-circleci $content'
+          command: 'cd bit\bit; $content = get-content spec-files.txt; npm run mocha-circleci $content'
           # command which support only - for debug purpose - this needed to be tested on windows (the glob might not work)
           # command: cd bit; npm run e2e-test-circle --debug
           environment:
